# finsight

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pr-review-rubric.md
.github/scripts/: apply_response.py  build_apply_prompt.py
.github/workflows/: apply-review.yml  pr-review.yml
data/: sample_portfolio.csv
docs/: pr-review-agent.md
src/finsight/: __init__.py  cli.py
src/finsight/advisor/: __init__.py  explainer.py  recommendations.py  risk_profile.py
src/finsight/forecast/: __init__.py  returns.py  scenario.py  trend.py
src/finsight/market/: __init__.py  fetcher.py  indicators.py  macro.py
src/finsight/portfolio/: __init__.py  analyzer.py  loader.py  optimizer.py  rebalancer.py
src/finsight/utils/: __init__.py  config.py
tests/test_market/: test_fetcher.py
tests/test_portfolio/: test_analyzer.py  test_loader.py  test_rebalancer.py
